test/corpus/Дія.txt
================================================================================
Дія з привітанням
================================================================================

дія привітатись()
    друк("Привіт від Лесі")
кінець

привітатись()

--------------------------------------------------------------------------------

(module
  (block
    (diia_definition
      (identifier)
      (parameter_list)
      (block
        (function_call
          (symbol
            (identifier))
          (argument_list
            (expression_sequence
              (primitive
                (string)))))))
    (function_call
      (symbol
        (identifier))
      (argument_list))))

================================================================================
Дія з додаванням
================================================================================

дія додати(а число = 0, б число = 0) число
    результат = 0
    результат += а
    результат += б
    вернути результат
кінець

додати(б=3, а=1)

--------------------------------------------------------------------------------

(module
  (block
    (diia_definition
      (identifier)
      (parameter_list
        (parameter_entry
          (identifier)
          (type
            (primitive_type)))
        (parameter_entry
          (identifier)
          (type
            (primitive_type))))
      (block
        (assign_statement
          (symbol
            (identifier))
          (primitive
            (number)))
        (assign_statement
          (symbol
            (identifier))
          (symbol
            (identifier)))
        (assign_statement
          (symbol
            (identifier))
          (symbol
            (identifier)))
        (return_statement
          (symbol
            (identifier)))))
    (function_call
      (symbol
        (identifier))
      (argument_list
        (dictionary
          (dictionary_entry
            (identifier)
            (primitive
              (number)))
          (dictionary_entry
            (identifier)
            (primitive
              (number))))))))

================================================================================
Дія з привітанням (складне)
================================================================================

дія привітатись(імʼя текст = "Лесі") ніщо
    друк("Привіт від %(імʼя)!")
кінець
привітатись(імʼя="Мавки")

--------------------------------------------------------------------------------

(module
  (block
    (diia_definition
      (identifier)
      (parameter_list
        (parameter_entry
          (identifier)
          (type
            (primitive_type))
          (primitive
            (string))))
      (type
        (primitive_type))
      (block
        (function_call
          (symbol
            (identifier))
          (argument_list
            (expression_sequence
              (primitive
                (string
                  (string_interpolation
                    (symbol
                      (identifier))))))))))
    (function_call
      (symbol
        (identifier))
      (argument_list
        (dictionary
          (dictionary_entry
            (identifier)
            (primitive
              (string))))))))

======
Параметри дії
======

дія привітатися(привітання текст = "Привіт", дата текст = "сьогодні") Результат
  привітання = "[%(дата)]: %(привітання)"
  привітання.надрукувати()
кінець

привітатися(
  привітання=Привітання(),
  дата="вчора"
)

------


======
Тривала дія
======

тривала дія привітатись()
    чекати привітання = отримати_привітання()
    друк(привітання)
кінець

------


======
Спец дія
======

спец дія словник.збити_привітання()
  я["привітання"] = "Привіт"
кінець

-----


======
Чародія
======

дія Привітання.чародія_текст() текст
  вернути "%(я.привітання) від %(я.імʼя)"
кінець

------
