test/corpus/Оператори.txt
================================================================================
Оператори присвоєння
================================================================================

a = 1
а це 1
а := 1
a += 1
a -= 1
а *= 1
а /= 1
а //= 1
а <<= 1
а >>= 1
а **= 1
а &= 1
а |= 1
а ^= 1
a %= 1
а &&= 1
a ||= 1
a ??= 1

--------------------------------------------------------------------------------

(module
  (block
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))
    (assign_statement
      (symbol
        (identifier))
      (primitive
        (number)))))

================================================================================
Бінарні оператори (арифметичні)
================================================================================

а + б
а - б
а * б
а / б
а // б
а % б
а ** б

--------------------------------------------------------------------------------

(module
  (block
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (binary_expression
        (symbol
          (identifier))
        (symbol
          (identifier))))))

======
Бінарні оператори (побітові)
======

а << б
а >> б
а & б
а | б
а ^ б

------


================================================================================
Унарні оператори
================================================================================

а = -а
а = +а
а = !а
а = ~а

--------------------------------------------------------------------------------

(module
  (block
    (assign_statement
      (symbol
        (identifier))
      (unary_expression
        (symbol
          (identifier))))
    (assign_statement
      (symbol
        (identifier))
      (unary_expression
        (symbol
          (identifier))))))

================================================================================
Оператори інкременту / декременту
================================================================================

a++
a--
--a
++a

--------------------------------------------------------------------------------

(module
  (block
    (assign_statement
      (symbol
        (identifier)))
    (assign_statement
      (symbol
        (identifier)))
    (assign_statement
      (symbol
        (identifier)))
    (assign_statement
      (symbol
        (identifier)))))

================================================================================
Оператори порівняння
================================================================================

а == б
а != б
а > б
а < б
а >= б
а <= б
а є б

--------------------------------------------------------------------------------

(module
  (block
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (unary_expression
          (binary_expression
            (symbol
              (identifier))
            (symbol
              (identifier))))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))))

================================================================================
Оператори порівняння (словесні)
================================================================================

а не є б
а рівно б
а не рівно б
а більше б
а не більше б
а менше б
а не менше б
а містить б
а не містить б

--------------------------------------------------------------------------------

(module
  (block
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (unary_expression
          (binary_expression
            (symbol
              (identifier))
            (symbol
              (identifier))))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))))

================================================================================
Логічні оператори
================================================================================

а або б
а і б
а || б
а && б

--------------------------------------------------------------------------------

(module
  (block
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))
    (if_statement
      (if_clause
        (binary_expression
          (symbol
            (identifier))
          (symbol
            (identifier)))))))
